public/stylesheets/sass/listing.scss
.listing-hero {
  height: 575px;
}

.listing-container {
  width: 100%;
}

#vr-player-listing {
  height: 600px;
  width: 100%;
}

.amenity-name {
  font-family: "Roboto";
  font-weight: 200;
  font-size: 15px;
  color: #551a8b;
}

.listing-sub-section {
  font-family: "Roboto";
  font-weight: 500;
  font-size: 17px;
}

.listing-contact-address {
  padding-bottom: 25px;
}

.listing-contact-street,
.listing-contact-agent-name {
  font-family: "Roboto";
  font-weight: 500;
  font-size: 22px;
  margin-bottom: 3px;
}

.listing-contact-agent-image {
  height: 75px;
  border-radius: 50%;
  float: right !important;
}

.listing-contact-agent-name {
  font-family: "Roboto";
  font-weight: 400;
  font-size: 20px;
  margin-bottom: 3px;
  text-align: left;
  padding-top: 0px;
}

.agent-business-name,
.listing-city {
  font-family: "Roboto";
  font-size: 17px;
  font-weight: 300;
}

.listing-contact-agent-number {
  text-align: left;
}

.availability-label,
.neighborhood-label {
  font-family: "Roboto";
  font-size: 15px;
  font-weight: 400;
  color: #fff;
  padding: 8px 20px;
  border-radius: 3px;
  margin: 10px 10px;
  display: inline-block;
  box-sizing: border-box;
}

.availability-label {
  background-color: $orange;
}

.neighborhood-label {
  background-color: $blue;
}

.contact-box {
  background-color: #fff;
  border: 1.5px solid $light-gray;
  padding: 25px 30px;
  height: 100%;
}

.amenity-icon {
  height: 40px;
  margin-bottom: 8px;
}

.amenity-text{
  font-family: 'Roboto';
  font-weight: 300;
  font-size: 15px;
  color: $dk-gray;
  line-height: 1.2;
}

.amenity-item {
  padding-bottom: 15px;
}

.listing-map{
  position: relative;
  height: 400px;
  margin-top: 20px;
  margin-bottom: 30px;
}

#map{
  height: 370px;
position: relative;
overflow: hidden;
}

.medium {
  font-weight: 500 !important;
  color: #333;
}

.listing-fee {
  padding-top: 15px;
}

#listing-divider {
  padding-bottom: 0px;
  line-height: 1;
  margin-bottom: 0px;
}

hr#listing-divider {
  margin-top: 6px;
  margin-bottom: 20px;
}

//----- managament app css (temp) -----//

.listing-data-form label {
  font-family: "Roboto";
  font-size: 17px;
  font-weight: 400;
}
//---- xl container ---//
@media (min-width: 1440px) {
  .listing-container {
    width: 90%;
  }
}

//---- xl container ---//
@media (max-width: 1399px) {
  .listing-container {
    width: 100%;
  }
}

//---- desktop ---//
@media (min: 768px) {
  .agent-business-name {
    text-align: left;
  }
}

//---- Tablet ---//
@media (max-width: 767px) {
  .listing-contact-agent-image {
    display: block;
    margin-left: auto;
    margin-right: auto;

    float: none !important;
  }

  .listing-contact-agent-name {
    text-align: center;
    padding-top: 10px;
  }

  .listing-contact-agent-number,
  .agent-business-name {
    text-align: center;
  }

  .availability-label,
  .neighborhood-label {
    width: 45%;
    display:inline-block;
  }
}

//------ adjustments for labels ----- //

@media (max-width: 525px) {
  .availability-label,
  .neighborhood-label {
    width: 70%;
    display: block;
    margin-left: auto;
    margin-right: auto;

  }
}

